- Written MovieEntity class - Written WatchlistMovieEntity class - Written Exception classes - Written Unit tests for MovieEntity class