@@ -1,13 +1,17 @@
 package at.ac.fhcampuswien.fhmdb;
 
-import org.junit.jupiter.api.Assertions;
+import at.ac.fhcampuswien.fhmdb.domain.MovieEntity;
+import com.j256.ormlite.dao.Dao;
+import com.j256.ormlite.dao.DaoManager;
+import com.j256.ormlite.jdbc.JdbcConnectionSource;
+import com.j256.ormlite.support.ConnectionSource;
+import com.j256.ormlite.table.TableUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.openapitools.client.model.Movie;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.sql.SQLException;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
@@ -27,6 +31,7 @@ class HomeControllerTest {
         homeController = new HomeController();
         movies = new ArrayList<>(List.of(bladeRunner, coolWorld, inception));
     }
+
 
     //-----SORTING------//
 
@@ -435,8 +440,8 @@ class HomeControllerTest {
 
     @Test
     public void getMostPopularActor_ListWithNullMovies_ReturnsValid() { // Falls die Liste Filme enthält, aber einige null sind, sollte das keine Fehler verursachen.
-        Movie movie1 = new Movie().mainCast(List.of("Actor A"));
-        List<Movie> movies = Arrays.asList(movie1, null);
+        Movie movie = new Movie().mainCast(List.of("Actor A"));
+        List<Movie> movies = Arrays.asList(movie, null);
 
         assertEquals("Actor A", homeController.getMostPopularActor(movies));
     }
@@ -497,4 +502,379 @@ class HomeControllerTest {
         tempMovies = new ArrayList<>(List.of(testmovie1, testmovie2, testmovie3));
         assertEquals(0, homeController.getLongestMovieTitle(tempMovies));
     }
+
+    @Test
+    public void genresToString_MultipleGenres_ReturnsCommaSeparatedString() {
+        List<Movie.GenresEnum> genres = List.of(
+                Movie.GenresEnum.ACTION,
+                Movie.GenresEnum.DRAMA,
+                Movie.GenresEnum.COMEDY
+        );
+
+        String result = MovieEntity.genresToString(genres);
+        assertEquals("ACTION,DRAMA,COMEDY", result);
+    }
+
+    @Test
+    public void genresToString_EmptyList_ReturnsEmptyString() {
+        List<Movie.GenresEnum> genres = Collections.emptyList();
+
+        String result = MovieEntity.genresToString(genres);
+        assertEquals("", result);
+    }
+
+    @Test
+    public void genresToString_SingleGenre_ReturnsSingleGenreString() {
+        List<Movie.GenresEnum> genres = List.of(Movie.GenresEnum.HORROR);
+
+        String result = MovieEntity.genresToString(genres);
+        assertEquals("HORROR", result);
+    }
+
+    @Test
+    public void genresToString_NullInput_ReturnsEmptyString() {
+        List<Movie.GenresEnum> genres = null;
+
+        String result = MovieEntity.genresToString(genres);
+        assertEquals("", result);
+    }
+
+    @Test
+    void toMovies_ParsesGenresCorrectly() {
+        MovieEntity entity = new MovieEntity();
+        entity.apiId = UUID.randomUUID().toString();
+        entity.genres = "ACTION,SCIENCE_FICTION";
+
+        List<Movie> movies = MovieEntity.toMovies(Collections.singletonList(entity));
+        List<Movie.GenresEnum> genres = movies.get(0).getGenres();
+
+        assertNotNull(genres);
+        assertTrue(genres.contains(Movie.GenresEnum.ACTION));
+        assertTrue(genres.contains(Movie.GenresEnum.SCIENCE_FICTION));
+    }
+
+
+    @Test
+    void insertMovieEntity_GeneratesAutoIncrementId() throws Exception {
+
+        // Verbindung zur eingebetteten H2-In-Memory-Datenbank
+        ConnectionSource connectionSource = new JdbcConnectionSource("jdbc:h2:mem:testdb");
+        Dao<MovieEntity, Long> movieDao = com.j256.ormlite.dao.DaoManager.createDao(connectionSource, MovieEntity.class);
+
+        // Tabelle erstellen
+        TableUtils.createTableIfNotExists(connectionSource, MovieEntity.class);
+
+        // Arrange
+
+        MovieEntity entity = new MovieEntity();
+        entity.apiId = UUID.randomUUID().toString();
+        entity.title = "Inception";
+        entity.description = "A mind-bending thriller";
+        entity.genres = "ACTION,SCIENCE_FICTION";
+        entity.releaseYear = 2010;
+        entity.imgUrl = "https://example.com/inception.jpg";
+        entity.lengthInMinutes = 148;
+        entity.rating = 8.8;
+
+        // Act
+        movieDao.create(entity); // wird gespeichert und ID generiert
+
+        // Assert
+        assertTrue(entity.getId() > 0, "ID should be > 0 after insert");
+
+        // Optional: Prüfe, ob der Datensatz korrekt in der DB ist
+        List<MovieEntity> movies = movieDao.queryForAll();
+        assertEquals(1, movies.size());
+        assertEquals(entity.title, movies.get(0).title);
+        System.out.println("Gespeicherter Datensatz mit ID: " + entity.getId());
+        connectionSource.close();
+    }
+
+    @Test
+    void insertMovieEntity_IdIsGenerated() throws Exception {
+        ConnectionSource connectionSource = new JdbcConnectionSource("jdbc:h2:mem:testdb1");
+        Dao<MovieEntity, Long> movieDao = DaoManager.createDao(connectionSource, MovieEntity.class);
+        TableUtils.createTableIfNotExists(connectionSource, MovieEntity.class);
+
+        MovieEntity entity = new MovieEntity();
+        entity.apiId = UUID.randomUUID().toString();
+        entity.title = "Inception";
+        movieDao.create(entity);
+
+        assertTrue(entity.getId() > 0, "ID sollte > 0 sein");
+
+        connectionSource.close();
+    }
+
+    @Test
+    void insertMultipleEntities_HaveIncrementingIds() throws Exception {
+        // Eigene Datenbankverbindung pro Test
+        ConnectionSource connectionSource = new JdbcConnectionSource("jdbc:h2:mem:testdb2");
+        Dao<MovieEntity, Long> movieDao = DaoManager.createDao(connectionSource, MovieEntity.class);
+        TableUtils.createTableIfNotExists(connectionSource, MovieEntity.class);
+        // Arrange
+        MovieEntity entity1 = new MovieEntity();
+        entity1.apiId = UUID.randomUUID().toString();
+        entity1.title = "Movie One";
+
+        MovieEntity entity2 = new MovieEntity();
+        entity2.apiId = UUID.randomUUID().toString();
+        entity2.title = "Movie Two";
+
+        // Act
+        movieDao.create(entity1);
+        movieDao.create(entity2);
+
+        // Assert
+        assertTrue(entity1.getId() < entity2.getId(), "IDs sollten aufsteigend sein");
+
+        System.out.println("ID 1: " + entity1.getId());
+        System.out.println("ID 2: " + entity2.getId());
+
+        connectionSource.close();
+    }
+
+    @Test
+    void insertMovieEntity_IsPersisted() throws Exception {
+        ConnectionSource connectionSource = new JdbcConnectionSource("jdbc:h2:mem:testdb2");
+        Dao<MovieEntity, Long> movieDao = DaoManager.createDao(connectionSource, MovieEntity.class);
+        TableUtils.createTableIfNotExists(connectionSource, MovieEntity.class);
+
+        MovieEntity entity = new MovieEntity();
+        entity.apiId = UUID.randomUUID().toString();
+        entity.title = "Inception";
+        movieDao.create(entity);
+
+        List<MovieEntity> movies = movieDao.queryForAll();
+        assertEquals(1, movies.size());
+        assertEquals("Inception", movies.get(0).title);
+
+        connectionSource.close();
+    }
+
+    @Test
+    void insertMovieEntity_CompleteDataCheck() throws Exception {
+        ConnectionSource connectionSource = new JdbcConnectionSource("jdbc:h2:mem:testdb3");
+        Dao<MovieEntity, Long> movieDao = DaoManager.createDao(connectionSource, MovieEntity.class);
+        TableUtils.createTableIfNotExists(connectionSource, MovieEntity.class);
+
+        MovieEntity entity = new MovieEntity();
+        entity.apiId = UUID.randomUUID().toString();
+        entity.title = "Inception";
+        entity.description = "A mind-bending thriller";
+        entity.genres = "ACTION,SCIENCE_FICTION";
+        entity.releaseYear = 2010;
+        entity.imgUrl = "https://example.com/inception.jpg";
+        entity.lengthInMinutes = 148;
+        entity.rating = 8.8;
+        movieDao.create(entity);
+
+        MovieEntity saved = movieDao.queryForId(entity.getId());
+        assertEquals("Inception", saved.title);
+        assertEquals("A mind-bending thriller", saved.description);
+        assertEquals("ACTION,SCIENCE_FICTION", saved.genres);
+        assertEquals(2010, saved.releaseYear);
+        assertEquals("https://example.com/inception.jpg", saved.imgUrl);
+        assertEquals(148, saved.lengthInMinutes);
+        assertEquals(8.8, saved.rating);
+
+        connectionSource.close();
+    }
+
+    @Test
+    void fromMovies_ValidMovieList_ReturnsCorrectSize() {
+
+        List<Movie> movies = List.of(
+                new Movie().id(UUID.randomUUID()).title("A").description("Nice movie").genres(List.of(ACTION)).releaseYear(2000).lengthInMinutes(120).rating(8.5),
+                new Movie().id(UUID.randomUUID()).title("B").description("Hard core").genres(List.of(ADVENTURE)).releaseYear(2001).lengthInMinutes(100).rating(7.5)
+        );
+        System.out.println("Debug: Movie-Liste: " + movies);
+
+        List<MovieEntity> entities = MovieEntity.fromMovies(movies);
+        System.out.println("Debug: Ergebnismenge von MovieEntity.fromMovies(): " + entities);
+
+        assertEquals(2, entities.size());
+    }
+
+    @Test
+    public void fromMovies_ValidMovieList_ReturnsCorrectMovieEntities() {
+        // Arrange - Beispiel Objekte erstellen
+        Movie movie1 = new Movie()
+                .id(UUID.fromString("00000000-0000-0000-0000-000000000001"))
+                .title("Inception")
+                .description("Sci-Fi Thriller")
+                .genres(List.of(GenresEnum.SCIENCE_FICTION, GenresEnum.THRILLER))
+                .releaseYear(2010)
+                .imgUrl("url1")
+                .lengthInMinutes(148)
+                .rating(8.8);
+
+        System.out.println("Debug: Erstes Movie erstellt: " + movie1);
+
+        Movie movie2 = new Movie()
+                .id(UUID.fromString("00000000-0000-0000-0000-000000000002"))
+                .title("Titanic")
+                .description("Romantic Drama")
+                .genres(List.of(GenresEnum.ROMANCE, GenresEnum.DRAMA))
+                .releaseYear(1997)
+                .imgUrl("url2")
+                .lengthInMinutes(195)
+                .rating(7.8);
+
+        System.out.println("Debug: Zweites Movie erstellt: " + movie2);
+
+        List<Movie> movies = Arrays.asList(movie1, movie2);
+        System.out.println("Debug: Movie-Liste: " + movies);
+
+        // Act - Methode aufrufen
+        List<MovieEntity> entities = MovieEntity.fromMovies(movies);
+        System.out.println("Debug: Ergebnismenge von MovieEntity.fromMovies(): " + entities);
+
+        // Assert - Ergebnisse prüfen
+        assertEquals(2, entities.size());
+
+        MovieEntity entity1 = entities.get(0);
+        System.out.println("Debug: Erste Entity: " + entity1);
+        assertEquals("00000000-0000-0000-0000-000000000001", entity1.getApiId());
+        assertEquals("Inception", entity1.getTitle());
+        assertEquals("Sci-Fi Thriller", entity1.getDescription());
+        assertEquals("SCIENCE_FICTION,THRILLER", entity1.getGenres());
+        assertEquals(2010, entity1.getReleaseYear());
+        assertEquals("url1", entity1.getImgUrl());
+        assertEquals(148, entity1.getLengthInMinutes());
+        assertEquals(8.8, entity1.getRating());
+
+        MovieEntity entity2 = entities.get(1);
+        System.out.println("Debug: Zweite Entity: " + entity2);
+        assertEquals("00000000-0000-0000-0000-000000000002", entity2.getApiId());
+        assertEquals("Titanic", entity2.getTitle());
+        assertEquals("Romantic Drama", entity2.getDescription());
+        assertEquals("ROMANCE,DRAMA", entity2.getGenres());
+        assertEquals(1997, entity2.getReleaseYear());
+        assertEquals("url2", entity2.getImgUrl());
+        assertEquals(195, entity2.getLengthInMinutes());
+        assertEquals(7.8, entity2.getRating());
+    }
+
+    @Test
+    void toMovies_ValidEntity_ReturnsCorrectMovieObject() {
+        // Arrange
+        MovieEntity entity = new MovieEntity();
+        entity.apiId = UUID.randomUUID().toString();
+        entity.title = "Inception";
+        entity.description = "A mind-bending thriller";
+        entity.genres = "ACTION,SCIENCE_FICTION";
+        entity.releaseYear = 2010;
+        entity.imgUrl = "https://example.com/inception.jpg";
+        entity.lengthInMinutes = 148;
+        entity.rating = 8.8;
+        System.out.println("Debug: MovieEntity: " + entity);
+        System.out.println("ID: " + entity.getId());
+
+        List<MovieEntity> entities = Collections.singletonList(entity);
+        System.out.println("Debug: MovieEntity-Liste: " + entities);
+
+        // Act
+        List<Movie> movies = MovieEntity.toMovies(entities);
+        System.out.println("Debug: Movie-Liste: " + movies);
+
+        // Assert
+        assertEquals(1, movies.size());
+
+        Movie movie = movies.get(0);
+        assertEquals(UUID.fromString(entity.apiId), movie.getId());
+        assertEquals(entity.title, movie.getTitle());
+        assertEquals(entity.description, movie.getDescription());
+        assertEquals(entity.releaseYear, movie.getReleaseYear());
+        assertEquals(entity.imgUrl, movie.getImgUrl());
+        assertEquals(entity.lengthInMinutes, movie.getLengthInMinutes());
+        assertEquals(entity.rating, movie.getRating());
+
+        // Test genre conversion
+        List<Movie.GenresEnum> genres = movie.getGenres();
+        System.out.println("Debug: Genres: " + genres);
+        assertNotNull(genres);
+        assertTrue(genres.contains(Movie.GenresEnum.ACTION));
+        assertTrue(genres.contains(Movie.GenresEnum.SCIENCE_FICTION));
+    }
+
+    @Test
+    void toMovies_SingleEntity_ReturnsSingleMovie() {
+        MovieEntity entity = new MovieEntity();
+        entity.apiId = UUID.randomUUID().toString();
+        entity.title = "Inception";
+
+        List<MovieEntity> entities = Collections.singletonList(entity);
+        List<Movie> movies = MovieEntity.toMovies(entities);
+
+        assertEquals(1, movies.size());
+    }
+
+    @Test
+    void toMovies_MapsBasicFieldsCorrectly() {
+        UUID apiId = UUID.randomUUID();
+        MovieEntity entity = new MovieEntity();
+        entity.apiId = apiId.toString();
+        entity.title = "Inception";
+        entity.description = "A mind-bending thriller";
+        entity.releaseYear = 2010;
+        entity.imgUrl = "https://example.com/inception.jpg";
+        entity.lengthInMinutes = 148;
+        entity.rating = 8.8;
+
+        List<Movie> movies = MovieEntity.toMovies(Collections.singletonList(entity));
+        Movie movie = movies.get(0);
+
+        assertEquals(apiId, movie.getId());
+        assertEquals("Inception", movie.getTitle());
+        assertEquals("A mind-bending thriller", movie.getDescription());
+        assertEquals(2010, movie.getReleaseYear());
+        assertEquals("https://example.com/inception.jpg", movie.getImgUrl());
+        assertEquals(148, movie.getLengthInMinutes());
+        assertEquals(8.8, movie.getRating());
+    }
+
+    @Test
+    public void toMovies_EmptyList_ReturnsEmptyList() {
+        // Arrange - Leere Liste vorbereiten
+        List<MovieEntity> entities = Collections.emptyList();
+        // Act - Methode aufrufen
+        List<Movie> movies = MovieEntity.toMovies(entities);
+        assertTrue(movies.isEmpty());
+    }
+
+    @Test
+    public void toMovies_NullGenres_ReturnsMovieWithEmptyGenreList() {
+        // Arrange - Eine Entity mit null bei Genres
+        MovieEntity entity = new MovieEntity();
+        entity.apiId = "00000000-0000-0000-0000-000000000003";
+        entity.title = "Null Genre Movie";
+        entity.description = "This movie has no genres set.";
+        entity.genres = null;  // <-- Wichtig für diesen Test
+        entity.releaseYear = 2022;
+        entity.imgUrl = "url3";
+        entity.lengthInMinutes = 120;
+        entity.rating = 5.5;
+
+        List<MovieEntity> entities = Collections.singletonList(entity);
+
+        // Act
+        List<Movie> movies = MovieEntity.toMovies(entities);
+
+        // Assert
+        assertEquals(1, movies.size());
+        Movie movie = movies.get(0);
+        assertEquals(UUID.fromString("00000000-0000-0000-0000-000000000003"), movie.getId());
+        assertEquals("Null Genre Movie", movie.getTitle());
+        assertEquals("This movie has no genres set.", movie.getDescription());
+        assertNotNull(movie.getGenres());
+        assertTrue(movie.getGenres().isEmpty());  // Leere Genre-Liste
+        assertEquals(2022, movie.getReleaseYear());
+        assertEquals("url3", movie.getImgUrl());
+        assertEquals(120, movie.getLengthInMinutes());
+        assertEquals(5.5, movie.getRating(), 0.01);
+    }
+
+
+
 }
